--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
         <tr>
                 <th>Title</th>
                 <th>Text</th>
+                <th colspan="3"></th>
         </tr>
 
         <% @articles.each do |article| %>
@@ -12,6 +13,9 @@
           <td><%= article.body %></td>
           <td><%= link_to 'Show', article_path(article) %></td>
           <td><%= link_to 'Edit', edit_article_path(article) %></td>
+          <td><%= link_to 'Destory', article_path(article),
+                method: :delete,
+                data: {confirm: 'Are you sure?'}%></td>
         </tr>
         <% end %>
 </table>
